fixed overflowing issues, re-arranged meni options

--- a/css/style.css
+++ b/css/style.css
@@ -16,18 +16,32 @@
 }
 body{
     font-family: 'Quicksand', sans-serif;
-    min-height: 100vh;
     background-color: var(--secondary-color);
     color: var(--text-color);
 }
-.spacing{
+.main-screen-spacing{
     width: 70%;
     margin: 0 auto;
 }
-.text-spacing{
+.horizontal-spacing{
     width: 90%;
     margin: 0 auto;
 }
+.carrer-title-container{
+    margin-top: 3em;
+}
+.title{
+    font-size: 1.5rem;
+}
+.contact-title-container{
+    display: block;
+    margin-top: 3em;
+}
+.about-title-container{
+    display: block;
+    margin-top: 3em;
+}
+
 #ham-menu,
 #toggle-theme{ font-size: 2rem; }
 #not-available {color: gray;}
@@ -53,6 +67,7 @@ a{
 
     backdrop-filter: blur(7px);
 
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -128,15 +143,13 @@ a{
 }
 .user-options > p{ font-size: .8em; }
 .user-menu-options-underline{ border-bottom: 1px solid var(--gray-color); /* Need to adjust this */ }
+
+
 /* Layout main screen */
 .root{
     display: flex;
     flex-direction: column;
     height: 100vh;
-
-}
-.article-body{
-    margin-bottom: 4em;
 }
 .header{ height: 50%; }
 .user-menu{
@@ -158,15 +171,16 @@ a{
 .disclaimer-text{
     color: gray;
 }
+.bottom-spacing{
+    margin-bottom: 3em;
+}
 
 /*Articles Layout*/
 .article-main-section{
     display: flex;
     flex-direction: column;
-    
-    margin-top: 4em;
+
     height: 90%;
-    margin-bottom: 1em;
 }
 .link{
     display: block;
